syntax = "proto3";

package registry;

service RegistryService {
  rpc RegisterService (RegistryRequest) returns (RegistryResponse) {}
}

message RegistryRequest {
  string serviceName = 1;
  string serviceAddress = 2;
  int32 servicePort = 3;
}

message RegistryResponse {
  string serviceId = 1;
  string serviceName = 2;
  int32 status = 3;
  string message = 4;
}
